--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,59 @@ nav input {
   text-align: center;
   margin-top: 20px;
 }
+
+#productsdisplay {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  padding: 1rem;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  background: white;
+  transition: transform 0.2s ease-in-out;
+}
+
+.product-card button {
+  padding: 0.5rem 1.2rem;
+  border-style: none;
+  background-color: red;
+  color: white;
+  transition: background-color 0.15s ease;
+}
+
+.product-card button:hover {
+  background-color: rgb(145, 6, 6);
+  border-radius: 3px;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
+}
+
+.product-card img {
+  width: 100%;
+  height: 180px;
+  object-fit: contain;
+  border-bottom: 2px solid #ddd;
+}
+
+.product-card h2 {
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.product-card p {
+  line-height: 1.5rem;
+  font-size: 14px;
+  color: #555;
+}
