--- a/src/App.css
+++ b/src/App.css
@@ -30,19 +30,21 @@ nav {
 }
 
 nav.scrolled {
-  background-color: #333333ab;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  background-color: #272727ab;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
+  background-color: white;
+  border-radius: 32px;
 }
 
 .socials-container {
-  
   display: flex;
   column-gap: 30px;
+  color: #ffffff;
 }
 
 .socials-icons {
@@ -50,6 +52,11 @@ nav.scrolled {
   column-gap: 1.5rem;
   justify-content: space-between;
   align-items: center;
+  color: white;
+}
+
+/* .add-book-icon {
+  color: white;
 }
 
 .socials-icons .instagram {
@@ -62,7 +69,7 @@ nav.scrolled {
 
 .socials-icons .phone {
   color: green;
-}
+} */
 
 #landing img {
   width: 100vw;
@@ -82,35 +89,67 @@ nav.scrolled {
   right: 0;
   color: white;
   padding: 0 4rem;
+  background-color: rgba(0, 50, 50, 0.3);
 }
 
 .landing-overlay h1 {
-  font-size: 300%;
+  font-size: 400%;
   font-family: "Merienda";
+  color: white;
 }
 
-.landing-overlay p {
+/* .landing-overlay p {
   font-size: 18px;
   margin-bottom: 3rem;
   color: black;
-}
+} */
 
-.landing-overlay span {
+/* .landing-overlay span {
   color: orangered;
   font-weight: 600;
   font-size: 35px;
+} */
+
+.reveal-text {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 3rem;
+}
+
+.word {
+  opacity: 0;
+  display: inline-block;
+  margin-right: 8px;
+  animation: fadeIn 0.5s forwards;
+}
+
+.delay-1 {
+  animation-delay: 0s;
+}
+.delay-2 {
+  animation-delay: 1s;
+}
+.delay-3 {
+  animation-delay: 2s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
 
 .landing-overlay button {
   padding: 0.5rem 1.2rem;
-  background-color: rgb(0, 89, 255);
+  background-color: #007bff;
   font-weight: 600;
   border-radius: 2px;
   cursor: pointer;
+  transition: background-color 0.15s;
 }
 
 .landing-overlay button:hover {
-  background-color: rgb(1, 74, 209);
+  background-color: #0553a7;
 }
 
 .hero-section {
@@ -127,19 +166,20 @@ nav.scrolled {
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .hero-overlay h1 {
+  margin-top: -90px;
   font-size: 400%;
   font-weight: 700;
   font-family: "Merienda";
   padding: 0 1rem;
-  color: black;
-  font-weight: 900;
+  color: white;
 }
 
 .hero-overlay span {
-  background-color: rgb(0, 153, 255);
+  background-color: #007bff;
   font-weight: bold;
   margin-top: 2rem;
   color: white;
@@ -147,10 +187,11 @@ nav.scrolled {
   padding: 0.5rem 0.8rem;
   border-radius: 3px;
   cursor: pointer;
+  transition: background-color 0.15s ease;
 }
 
 .hero-overlay span:hover {
-  background-color: rgb(7, 124, 202);
+  background-color: #0861c0;
 }
 
 .home-page {
@@ -160,7 +201,7 @@ nav.scrolled {
   padding: 2rem;
   gap: 80px;
   box-shadow: 0 0 px rgba(0, 0, 0, 0.3);
-  margin: 5rem;
+  margin: 4rem;
 }
 
 .home-left-section {
@@ -170,7 +211,8 @@ nav.scrolled {
 }
 
 .home-left-section h2 {
-  font-size: 250%;
+  font-size: 24px;
+  font-weight: bold;
   margin-bottom: 0.4rem;
   font-family: "Merienda";
   text-align: center;
@@ -211,6 +253,9 @@ nav.scrolled {
 .book-display-title-container h1 {
   margin-bottom: 1rem;
   font-family: "Merienda";
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
 }
 
 .book-display-title-container .title-shape {
@@ -219,7 +264,7 @@ nav.scrolled {
   transform-origin: center;
 }
 
-.add-book-button {
+/* .add-book-button {
   background-color: rgb(0, 153, 255);
   color: white;
   padding: 0.5rem 1.2rem;
@@ -231,23 +276,25 @@ nav.scrolled {
 
 .add-book-button:hover {
   background-color: rgb(7, 124, 202);
-}
+} */
 
 .search-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  column-gap: 3rem;
 }
 
 .search-container div input {
-  padding: 8px 10px;
-  border: 1px solid rgba(128, 128, 128, 0.089);
+  padding: 6px 8px;
+  border: 1px solid rgb(223, 220, 220);
+  font-size: 14px;
 }
 
 .search-container .search-button {
-  background-color: rgb(0, 153, 255);
-  color: white;
-  padding: 9px 30px;
+  background-color: #555;
+  color: #fff;
+  padding: 0.3rem 0.8rem;
   margin-left: -1px;
   border: 1px solid rgba(128, 128, 128, 0.116);
 }
@@ -257,14 +304,13 @@ nav.scrolled {
 }
 
 #bookDisplay {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr 1fr; */
-  gap: 5rem;
-  margin: 5rem;
+  gap: 2rem;
+  margin: 4rem;
 }
 
 .book-card {
   display: flex;
+  padding: 2rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -272,50 +318,88 @@ nav.scrolled {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   background: white;
   transition: transform 0.2s ease-in-out;
-  row-gap: 1rem;
+  row-gap: 0.5rem;
 }
 
-.book-card:hover {
+.book-card img {
+  height: 250px;
+  width: 160px;
+  object-fit: contain;
+}
+
+/* .book-card:hover {
   transform: scale(1.05);
   border: 2px solid goldenrod;
-}
+} */
 
-.book-card button {
-  padding: 0.5rem 1.2rem;
-  border-style: none;
+.view-button {
+  font-size: 12px;
+  padding: 0.1rem 0.7rem;
+  border: 1px solid #ddd;
   font-weight: bold;
-  background-color: rgb(0, 153, 255);
-  color: white;
+  background-color: #007bff;
+  color: #ffffff;
   transition: background-color 0.15s ease;
   border-radius: 3px;
   cursor: pointer;
 }
 
-.book-card button:hover {
-  background-color: rgb(7, 124, 202);
+.view-button:hover {
+  background-color: #0861c0;
+}
+
+.edit-book-button {
+  font-size: 12px;
+  padding: 0.1rem 0.7rem;
+  border-style: none;
+  font-weight: bold;
+  background-color: white;
+  color: green;
+  border: 1px solid green;
+  transition: background-color 0.15s ease;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.edit-book-button:hover {
+  background-color: green;
+  color: white;
+}
+
+.delete-book-button {
+  font-size: 12px;
+  padding: 0.3rem 0.7rem;
+  border-style: none;
+  font-weight: bold;
+  background-color: #555;
+  color: #fff;
+  transition: background-color 0.15s ease;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.delete-book-button:hover {
+  background-color: rgb(202, 11, 11);
 }
 
 .book-card:hover {
   transform: scale(1.05);
 }
 
-.book-card div img {
-  object-fit: contain;
-}
-
-.book-title {
-  font-size: 150%;
+.book-card h2 {
+  font-size: 18px;
   font-weight: 600;
+  margin-top: 10px;
 }
 
-.book-author {
-  font-size: 120%;
+.book-card p {
+  font-size: 16px;
 }
 
 .add-delete-buttons {
   display: flex;
   column-gap: 15px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 /* Styles for Book Details */
@@ -329,36 +413,31 @@ nav.scrolled {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 8rem;
+  padding: 6rem;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   background: white;
   transition: transform 0.2s ease-in-out;
+  border: 1px solid rgba(218, 165, 32, 0.281);
 }
 
 .book-details-card div img {
-  width: 100%;
-  height: 500px;
-  object-fit: contain;
-  border-bottom: 2px solid #ddd;
+  width: 250px;
+  height: auto;
 }
 
-.book-title {
+.book-details-title {
   font-size: 250%;
-  font-weight: 600;
-}
-
-.book-author {
-  font-size: 220%;
 }
 
 .right-section {
   display: flex;
   flex-direction: column;
+  row-gap: 20px;
   justify-content: center;
 }
 
 .book-details-card .right-section p {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 400;
 }
