--- a/src/index.css
+++ b/src/index.css
@@ -60,13 +60,13 @@ h1 {
 
 /* Styling for the success message box */
 .message-box {
-  /* background-color: #d1fae5; 
+  background-color: #d1fae5; 
             border: 1px solid #34d399; 
             color: #065f46; 
             padding: 12px 16px; 
             border-radius: 8px; 
             margin-bottom: 20px; 
-            text-align: left; */
+            text-align: left;
 }
 
 /* Styling for each group of label and input */
@@ -76,7 +76,6 @@ h1 {
   padding-left: 70px;
 }
 
-/* Styling for the labels (like "Book Title:") */
 label {
   display: block;
   font-size: 0.875rem;
@@ -101,13 +100,13 @@ textarea {
 }
 
 /* What happens when you click on an input box */
-input[type="text"]:focus,
+/* input[type="text"]:focus,
 input[type="number"]:focus,
 textarea:focus {
   outline: none;
   border-color: #3b82f6;
   box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
-}
+} */
 
 textarea {
   min-height: 100px;
@@ -134,10 +133,10 @@ button[type="submit"]:hover {
 }
 
 /* What happens when you click the button */
-button[type="submit"]:active {
+/* button[type="submit"]:active {
   transform: translateY(0);
-  box-shadow: 0 2px 5px rgba(59, 130, 246, 0.3);
-}
+  box-shadow: 0 2px 5px rgba(59, 130, 246, 0.3); */
+/* } */
 
 footer {
   background-color: #333;
