--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,7 @@ html {
 }
 
 nav {
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: black;
   padding: 0.4rem 8rem;
-  width: 100%;
-  z-index: 1000;
-  background-color: transparent;
 }
 
 nav.scrolled {
@@ -34,85 +26,17 @@ nav.scrolled {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
-  height: 40px;
-  width: 40px;
-  background-color: white;
-  border-radius: 32px;
-}
-
-.socials-container {
-  display: flex;
-  column-gap: 30px;
-  color: #ffffff;
-}
-
-.socials-icons {
-  display: flex;
-  column-gap: 1.5rem;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-}
-
-/* .add-book-icon {
-  color: white;
-}
-
-.socials-icons .instagram {
-  color: rgb(243, 12, 50);
-}
-
-.socials-icons .twitter {
-  color: blue;
-}
-
-.socials-icons .phone {
-  color: green;
-} */
-
-#landing img {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-}
-
 .landing-overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   color: white;
-  padding: 0 4rem;
-  background-color: rgba(0, 50, 50, 0.3);
+  padding: 0 8rem;
 }
 
 .landing-overlay h1 {
   font-size: 400%;
-  font-family: "Merienda";
   color: white;
 }
 
-/* .landing-overlay p {
-  font-size: 18px;
-  margin-bottom: 3rem;
-  color: black;
-} */
-
-/* .landing-overlay span {
-  color: orangered;
-  font-weight: 600;
-  font-size: 35px;
-} */
-
 .reveal-text {
-  font-size: 2rem;
-  font-weight: bold;
   margin-bottom: 3rem;
 }
 
@@ -141,93 +65,34 @@ nav.scrolled {
 
 .landing-overlay button {
   padding: 0.5rem 1.2rem;
-  background-color: #007bff;
-  font-weight: 600;
-  border-radius: 2px;
-  cursor: pointer;
-  transition: background-color 0.15s;
-}
-
-.landing-overlay button:hover {
-  background-color: #0553a7;
-}
-
-.hero-section {
-  position: relative;
-}
-
-.hero-overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0);
 }
 
 .hero-overlay h1 {
-  margin-top: -90px;
-  font-size: 400%;
-  font-weight: 700;
-  font-family: "Merienda";
-  padding: 0 1rem;
   color: white;
+  font-size: 400%;
+  font-family: "Merienda";
 }
 
 .hero-overlay span {
-  background-color: #007bff;
-  font-weight: bold;
-  margin-top: 2rem;
-  color: white;
-  border-radius: 2px;
   padding: 0.5rem 0.8rem;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.15s ease;
 }
 
-.hero-overlay span:hover {
-  background-color: #0861c0;
+.hero-overlay h1 {
+  margin-top: -80px;
 }
 
 .home-page {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   padding: 2rem;
-  gap: 80px;
-  box-shadow: 0 0 px rgba(0, 0, 0, 0.3);
-  margin: 4rem;
+  margin: 3.5rem;
 }
 
 .home-left-section {
-  max-width: 400px;
-  background-color: rgba(210, 232, 250, 0.267);
-  padding: 2rem;
-}
-
-.home-left-section h2 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 0.4rem;
-  font-family: "Merienda";
-  text-align: center;
+  padding: 4rem;
 }
 
 .home-left-section p {
   margin: 15px 0;
-}
-
-.home-right-section {
-  display: flex;
-  width: 100%;
-  max-width: 480px;
-  height: auto;
-  column-gap: 0.8rem;
+  line-height: 1.7;
 }
 
 .home-right-section img {
@@ -235,11 +100,6 @@ nav.scrolled {
   width: 200px;
   object-fit: cover;
   border-radius: 10px;
-}
-
-.home-image-1,
-.home-image-2 {
-  display: block;
 }
 
 .home-image-2 {
@@ -252,42 +112,11 @@ nav.scrolled {
 
 .book-display-title-container h1 {
   margin-bottom: 1rem;
-  font-family: "Merienda";
-  font-size: 24px;
-  font-weight: bold;
-  color: black;
-}
-
-.book-display-title-container .title-shape {
-  width: 100%;
-  transform: scaleX(1.3);
-  transform-origin: center;
-}
-
-/* .add-book-button {
-  background-color: rgb(0, 153, 255);
-  color: white;
-  padding: 0.5rem 1.2rem;
-  font-weight: bold;
-  border-radius: 2px;
-  cursor: pointer;
-  transition: background-color 0.15s ease;
-}
-
-.add-book-button:hover {
-  background-color: rgb(7, 124, 202);
-} */
-
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 3rem;
 }
 
 .search-container div input {
-  padding: 6px 8px;
-  border: 1px solid rgb(223, 220, 220);
+  padding: 8px;
+  border: 1px solid rgb(245, 243, 243);
   font-size: 14px;
 }
 
@@ -296,7 +125,6 @@ nav.scrolled {
   color: #fff;
   padding: 0.3rem 0.8rem;
   margin-left: -1px;
-  border: 1px solid rgba(128, 128, 128, 0.116);
 }
 
 .search-container .search-button:hover {
@@ -309,100 +137,14 @@ nav.scrolled {
 }
 
 .book-card {
-  display: flex;
   padding: 2rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  background: white;
-  transition: transform 0.2s ease-in-out;
-  row-gap: 0.5rem;
+  row-gap: 1.2rem;
 }
 
-.book-card img {
-  height: 250px;
-  width: 160px;
-  object-fit: contain;
-}
-
-/* .book-card:hover {
-  transform: scale(1.05);
-  border: 2px solid goldenrod;
-} */
-
-.view-button {
-  font-size: 12px;
-  padding: 0.1rem 0.7rem;
-  border: 1px solid #ddd;
-  font-weight: bold;
-  background-color: #007bff;
-  color: #ffffff;
-  transition: background-color 0.15s ease;
-  border-radius: 3px;
+.buttons button {
+  padding: 0.3rem 0.9rem;
   cursor: pointer;
 }
-
-.view-button:hover {
-  background-color: #0861c0;
-}
-
-.edit-book-button {
-  font-size: 12px;
-  padding: 0.1rem 0.7rem;
-  border-style: none;
-  font-weight: bold;
-  background-color: white;
-  color: green;
-  border: 1px solid green;
-  transition: background-color 0.15s ease;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.edit-book-button:hover {
-  background-color: green;
-  color: white;
-}
-
-.delete-book-button {
-  font-size: 12px;
-  padding: 0.3rem 0.7rem;
-  border-style: none;
-  font-weight: bold;
-  background-color: #555;
-  color: #fff;
-  transition: background-color 0.15s ease;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.delete-book-button:hover {
-  background-color: rgb(202, 11, 11);
-}
-
-.book-card:hover {
-  transform: scale(1.05);
-}
-
-.book-card h2 {
-  font-size: 18px;
-  font-weight: 600;
-  margin-top: 10px;
-}
-
-.book-card p {
-  font-size: 16px;
-}
-
-.add-delete-buttons {
-  display: flex;
-  column-gap: 15px;
-  margin-top: 10px;
-}
-
-/* Styles for Book Details */
 
 #bookDetails {
   padding: 2rem;
@@ -410,31 +152,7 @@ nav.scrolled {
 
 .book-details-card {
   margin: 4rem 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   padding: 6rem;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  background: white;
-  transition: transform 0.2s ease-in-out;
-  border: 1px solid rgba(218, 165, 32, 0.281);
-}
-
-.book-details-card div img {
-  width: 250px;
-  height: auto;
-}
-
-.book-details-title {
-  font-size: 250%;
-}
-
-.right-section {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  justify-content: center;
 }
 
 .book-details-card .right-section p {
