--- a/src/index.css
+++ b/src/index.css
@@ -60,13 +60,13 @@ h1 {
 
 /* Styling for the success message box */
 .message-box {
-  background-color: #d1fae5; 
-            border: 1px solid #34d399; 
-            color: #065f46; 
-            padding: 12px 16px; 
-            border-radius: 8px; 
-            margin-bottom: 20px; 
-            text-align: left;
+  background-color: #d1fae5;
+  border: 1px solid #34d399;
+  color: #065f46;
+  padding: 12px 16px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 /* Styling for each group of label and input */
@@ -141,7 +141,7 @@ button[type="submit"]:hover {
 footer {
   background-color: #333;
   color: #fff;
-  padding: 40px 20px;
+  padding: 30px 20px;
   font-family: Arial, sans-serif;
   margin-top: 100px;
   /* min-height:  50%; */
@@ -199,15 +199,15 @@ footer {
 
 .newsletter-form {
   display: flex;
-  margin-top: 15px;
+  margin: 15px 0;
 }
 
 .newsletter-form input[type="email"] {
-  border: none;
   padding: 10px 15px;
   border-radius: 5px 0 0 5px solid white;
-  outline: none;
   flex-grow: 1;
+  border: 1px solid rgb(56, 56, 56);
+  font-size: 14px;
 }
 
 .newsletter-form button {
@@ -218,6 +218,7 @@ footer {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-left: -1px;
 }
 
 .newsletter-form button:hover {
